--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,7 +6,7 @@
       copy:
         src: "/var/snap/jenkins/4874/workspace/jaya/target/MavenAnsibleWebApp.war"
         dest: "/opt/tomcat/webapps/MavenAnsibleWebApp.war"
-        remote_src: no
+        remote_src: yes
 
     - name: Restart Tomcat
       systemd:
